--- a/styles/novedades.css
+++ b/styles/novedades.css
@@ -1,23 +1,32 @@
 .blue{
-  height: 418px;
+  height: 341px;
   position: relative;
   text-align: center;
   display: block;
   align-content: center;
   background-image: linear-gradient(225deg, #0000FF 0%, #0000A3 100%);
   clip-path: polygon(
-    0 20%,
+    0 10%,
     100% 0,
     100% 100%,
     0 100%
   ); 
-  padding: 70px 0 50px 0 ;
+  padding: 40px 0 0 0 ;
+}
+
+
+.salto::after{
+  content: '\A';
+  white-space: pre;
+  
 }
 
 .titulo{
-  margin: 200px 0 20px 0;
+  margin: 60px 0 20px 0;
   color: white;
-  font-size: 48px;
+  font-size: 36px;
+  text-align: center;
+
   
 }
 
@@ -32,7 +41,7 @@
   padding: 10px;
   margin: 20px 0;
   border: none;
-  width: 30%;
+  width: 90%;
   }
 
 .btn-episodios:hover {
@@ -42,7 +51,7 @@
   transition: 0.4s;
   }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (min-width: 768px) {
 
   .blue{
     background-image: linear-gradient(225deg, #0000FF 0%, #0000A3 100%);
@@ -59,9 +68,15 @@
 
 
 .titulo{
-  margin: 150px 0 20px 0;
+  margin-top: 150px;
   color: white;
-  font-size: 36px;
+  font-size: 48px;
+  
+}
+
+.salto::after{
+  content: none;
+  white-space: normal;
   
 }
 
@@ -75,7 +90,7 @@
   font-size: 18px;
   padding: 10px;
   border: none;
-  width: 90%;
+  width: 30%;
   }
 
 .btn-episodios :hover {
