--- a/styles/styles.css
+++ b/styles/styles.css
@@ -19,6 +19,7 @@ h1 {
     letter-spacing: 0;
     font-weight: 300;
     line-height: 42px;
+    color: #060A24;
 
     }    
 
@@ -27,24 +28,18 @@ h2 {
     letter-spacing: 0;
     font-weight: 100;
     line-height: 42px;
+    color: #060A24;
     }    
-
-h3 {
-    font-family: 'IBM Plex Sans', sans-serif;
-    letter-spacing: 0;
-    font-weight: 600;
-    line-height: 42px;
-        }    
     
 p {
     font-family: 'IBM Plex Mono', monospace;
     font-size: 16px;
-    color: black;
+    color: #060A24;
     letter-spacing: 0;
     line-height: 22px;
     margin: 20px 0px;
     }
-
+/* 
 .titulos {
     font-family: 'IBM Plex Sans', sans-serif;
     letter-spacing: 0;
@@ -70,4 +65,4 @@ p {
     letter-spacing: 0;
 
     }    
-
+ */
