--- a/styles/estelares.css
+++ b/styles/estelares.css
@@ -15,24 +15,25 @@
     align-items: center
 }
 
+.salto::after{
+    content: none;
+    white-space: none;
+}
+
 .titulosphone{
     font-size: 48px;
  
 }
 
-.entrevistastitulo{
-    font-size: 48px;
-      
-}
-
-.titulostemas{
-    font-size: 48px;
-}
-
-
 .phone-cont{
     width: 407.6px;
     height: 650px;
+}
+
+.entrevistastitulo{
+    font-size: 48px;
+    margin-left: 160px
+      
 }
 
 .phonet{
@@ -40,15 +41,26 @@
     margin-left: 50px;
 }
 
+
 /* invitados */
 
+
+.titulostemas{
+    font-size: 48px;
+}
 
 .inv{
     position: relative;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: 5vh;
-    margin-bottom: 60px;
+    -webkit-grid-template-columns: repeat(3, 1fr);
+    -o-grid-template-columns: repeat(3, 1fr);
+    -ms-grid-template-columns: repeat(3, 1fr);
+    -webkit-grid-template-rows: 5vh;
+    -o-grid-template-rows: 5vh;
+    -ms-grid-template-rows: 5vh;
+    margin: 10px 0 60px 0;
 }
 
 .uno{
@@ -91,69 +103,58 @@
 @media only screen and (max-width: 768px) {
 
     .phone{
-        width: 100%;
-        margin-top: -70px;
-        position: relative;
-        display: flex;
-        margin-bottom: 50px;
-        
+        margin: -70px 0 50px 0;        
     }
     
     .venimos{
         width: 100%;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-content: center;
-    
+        flex-direction: column; 
     }
 
 
     .salto::after{
     content: '\A';
     white-space: pre;
-    
-}
-    
-    .phone-cont{
-    width: 340px;
-    height: 519px;
-    margin-bottom: 30px;
-}
-
-
-.phonet{
-    width: 90%;
-    margin: 0;
-}
-
-
-    /* invitados */
+        
+    }
 
     .titulosphone{
         padding: 0;
         font-size: 36px;
-     
+    
+    }
+        
+        .phone-cont{
+        width: 340px;
+        height: 519px;
+        margin-bottom: 30px;
     }
 
     .entrevistastitulo{
         padding: 0 0 20px 20px;
+        margin:0;
         font-size: 36px;
     }
 
+    .phonet{
+        width: 90%;
+        margin: 0;
 
+    }
+
+    /* invitados */
     .titulostemas{
         padding: 0 0 20px 20px;
         font-size: 36px;
-    }
-    
+        }
+        
     .inv{
-        position: relative;
+
         display: flex;
         flex-wrap: wrap;
 
+        }
+        
+
+
     }
-    
-
-
-}
