--- a/styles/footer.css
+++ b/styles/footer.css
@@ -18,22 +18,22 @@
 
 .footer a:hover{
  color: teal;
+ transition: 0.4s;
 }
+
 
 
 @media only screen and (min-width: 768px) {
 
 
 .footer{
-    background-color:white;
-    width: 100%;
+
     display: flex;
     justify-content: space-around;
 }
 
 .footer-icon{
-    display: flex;
-    justify-content: space-around;
+
     align-items: flex-end;
     width: 20%;
     padding: 0 20px;
@@ -45,5 +45,6 @@
 
 .footer a:hover{
  color: teal;
+ transition: 0.4s;
 }
 }
