--- a/styles/novedades.css
+++ b/styles/novedades.css
@@ -1,16 +1,15 @@
 .blue{
+  width: 100%;
   height: 341px;
   position: relative;
   text-align: center;
   display: block;
   align-content: center;
   background-image: linear-gradient(225deg, #0000FF 0%, #0000A3 100%);
-  clip-path: polygon(
-    0 10%,
-    100% 0,
-    100% 100%,
-    0 100%
-  ); 
+  clip-path: polygon(0 10%,100% 0,100% 100%,0 100%); 
+  -webkit-clip-path: polygon(0 10%,100% 0,100% 100%,0 100%);
+  -o-clip-path: polygon(0 10%,100% 0,100% 100%,0 100%);
+  -ms-clip-path: polygon(0 10%,100% 0,100% 100%,0 100%);
   padding: 40px 0 0 0 ;
 }
 
@@ -27,7 +26,7 @@
   font-size: 36px;
   text-align: center;
 
-  
+
 }
 
 
@@ -54,49 +53,29 @@
 @media only screen and (min-width: 768px) {
 
   .blue{
-    background-image: linear-gradient(225deg, #0000FF 0%, #0000A3 100%);
-    width: 100%;
-    text-align: center;
-    clip-path: polygon(
-      0 10%,
-      100% 0,
-      100% 100%,
-      0 100%
-    ); 
+
     padding: 40px 0 50px 0 ;
   }
 
-
-.titulo{
-  margin-top: 150px;
-  color: white;
-  font-size: 48px;
   
-}
-
 .salto::after{
   content: none;
   white-space: normal;
   
 }
 
+.titulo{
+
+  font-size: 48px;
+  margin-top: 150px;
   
+}
+
 .btn-episodios {
-  font-family: 'IBM Plex Mono', monospace;
-  color: #060A24;
-  background-color: #00F3BB;
-  letter-spacing: 0;
-  line-height: 24px;
-  font-size: 18px;
-  padding: 10px;
-  border: none;
-  width: 30%;
+  
+   width: 30%;
   }
 
-.btn-episodios :hover {
-  background-image: linear-gradient(225deg, #0000FE 0%, #00F0B8 100%);
-  color: white;
-  cursor: pointer;
-  }
+
 
 }
