modigue el div de el menu

--- a/styles/menu.css
+++ b/styles/menu.css
@@ -49,7 +49,7 @@
         height: 2px;
         background-color: black;    
     }
-    div.linea2{
+    .linea2{
         margin-top: 3px;
         margin-bottom: 3px;
     }
