se agrego display flex a menu hamburguesa

--- a/styles/menu.css
+++ b/styles/menu.css
@@ -42,6 +42,10 @@
     right: 20px;
     top: 15px;
     z-index: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 
 }
     .hambur > span{
